Decimal to Hexadecimal with Fractions is working

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,14 @@ project(BaseConverter)
 
 set(CMAKE_CXX_STANDARD 26)
 
-add_executable(BaseConverter main.cpp)
+add_executable(BaseConverter main.cpp
+        stringManipulator.cpp
+        stringManipulator.h
+        calculationHelper.cpp
+        calculationHelper.h
+        dataStructureConverter.cpp
+        dataStructureConverter.h
+        globals.cpp
+        globals.h
+        hexConverter.cpp
+        hexConverter.h)
